YTDB-635: tests + bugfixes